# bmstu-os

./: .gitignore  Dockerfile  task_1.c
lab_01/: int_8h.asm  sub_1.asm
lab_02/: 1.c
lab_03/: notes.md  task_01_1.c  task_04.c  task_05.c  task_3
lab_03/demo/: prg_01.c  prg_02.c
lab_04/: Dockerfile  build.sh  readme.md  task_2.c
lab_05/: questions.md
lab_06/: my_daemon  readme.md
lab_07/: Makefile  lib.bib  lib.tex
lab_07/parts/: title.aux
lab_08/bakery/: Makefile.bakery  bakery.h  bakery.x  bakery_client.c  bakery_clnt.c  bakery_server  bakery_server.c  bakery_svc.c
lab_08/bakery_c/: bakery.h  bakery.x  bakery_client.c  bakery_clnt.c  bakery_server.c  bakery_svc.c  bakery_xdr.c
lab_08/bakery_s/: Makefile.bakery  bakery.h  bakery.x  bakery_cl1ent  bakery_client  bakery_client.c  bakery_clnt.c  bakery_server.c  bakery_svc.c
lab_08/calculator/: Makefile.calculator  calculator.x  calculator_client  calculator_client.c  calculator_clnt.c  calculator_server  calculator_server.c
lab_08/calculator_c/: calculator_server.c
lab_08/calculator_s/: CMakeLists.txt  calculator_client.c  calculator_svc.c  compile_commands.json
lab_08/mod_calculator/: calculator.h  calculator_client.c  calculator_clnt.c  calculator_server  calculator_svc.c
lab_08/mp_bulka/: Dockerfile  Makefile  bakery.h  bakery_client  bakery_client.c  bakery_clnt.c  bakery_server  bakery_server.c  bakery_svc.c
mod_calculator/: Makefile.calculator  calculator.x  calculator_client  calculator_server.c  calculator_svc.c  calculator_xdr.c
sem_1/lab_01/: readme.md
sem_1/lab_02/: build.sh  (+1 more)
(+141 files in other folders)
